[gd_scene load_steps=2 format=3 uid="uid://byxavqt4pyw15"]

[ext_resource type="Script" path="res://ui/HUD_Expedition.gd" id="1_w3y8v"]

[node name="HUD_Expedition" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w3y8v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Tiempo: 00:00"

[node name="MineralsRunLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Minerales (run): 0.0"

[node name="MineralsTotalLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Minerales (total): 0.0"

[node name="MiningRateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Velocidad: 1.0 /s"
